
[package]
authors = ["Long(long.zou@gmail.com)"]
edition = "2021"
name = "chimes-utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-tls = { version = "3", features = ["connect", "uri"] }
actix-web = { version = "4.0.1", features = ["rustls"] }
lazy_static = "1.4.0"
rsa = "0.6.1"
base64 = "0.21.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
yaml-rust = "0.4.5"
rbson = "2.0"
log = "0.4"
chrono = "0.4.19"
rand = "0.8.5"
substring = "1.4.0"
async-std = "1.7.0"
once_cell = "1.16.0"
mime = { version = "0.3.16" }
encoding_rs = { version = "0.8.30"}
urlencoding = "2.1.0"
percent-encoding = "2.1.0"
futures-util = "0.3.30"
redis = { version = "0.22.1", features = ["default", "tokio-comp", "async-std-comp", "cluster"] }
r2d2 = "0.8.10"
rbatis = {version = "3.1.16"}
openssl = { version = "0.10.64", features = ["vendored"] }
awc = { version = "3.0.0", features = ["openssl", "rustls"] }
tokio = {version = "1.17", features = ["full", "rt-multi-thread"] }
lettre = "0.10" 
rhai = "1.14.0"
tera = "1"
tls_rustls ={ package = "rustls", version = "0.20.0", features = ["dangerous_configuration"] }
hex = { version = "0.4", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-service="0.6.0"
windows={ version="0.48.0", features = [ "Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Time", "Win32_System_ProcessStatus", "Win32_Networking_WinSock", "Win32_NetworkManagement_IpHelper", "Win32_System_SystemInformation","Win32_System_Diagnostics_Debug"]}

[target.'cfg(not(windows))'.dependencies]
libc = "*"
nix = { version = "*", features = ["default"] }
